--- a/rollup/core/classes/RollupDateLiteral.cls
+++ b/rollup/core/classes/RollupDateLiteral.cls
@@ -1,10 +1,80 @@
+@SuppressWarnings('PMD.FieldDeclarationsShouldBeAtStart')
 public abstract class RollupDateLiteral {
-  private static final Map<String, Type> KEY_TO_DATE_LITERAL = new Map<String, Type>{
-    'YESTERDAY' => YesterdayLiteral.class,
-    'TODAY' => null,
-    'TOMORROW' => null,
-    'LAST_WEEK' => null,
-    'THIS_WEEK' => null,
+  private static final String RELATIVE_LITERAL_REGEX = '(LAST|NEXT)_N_(DAYS|WEEKS|MONTHS|YEARS|QUARTERS|FISCAL_​QUARTERS|FISCAL_​YEARS):?\\d*';
+
+  /**
+   * Begin the heinous but memory-friendly way to get at all these singletons ...
+   * We also have to use the blanket PMD suppression for these fields because
+   * otherwise the scanner complains that the map isn't first, but if the map is above these properties
+   * we get the compilation error "Illegal forward reference" - classic
+   */
+
+  private static final Datetime NOWISH {
+    get {
+      if (NOWISH == null) {
+        return Datetime.newInstance(System.today(), Time.newInstance(0, 0, 0, 0));
+      }
+      return NOWISH;
+    }
+    set;
+  }
+
+  private static final RollupDateLiteral YESTERDAY_LITERAL {
+    get {
+      if (YESTERDAY_LITERAL == null) {
+        YESTERDAY_LITERAL = new YesterdayLiteral();
+      }
+      return YESTERDAY_LITERAL;
+    }
+    set;
+  }
+
+  private static final RollupDateLiteral TODAY_LITERAL {
+    get {
+      if (TODAY_LITERAL == null) {
+        TODAY_LITERAL = new TodayLiteral();
+      }
+      return TODAY_LITERAL;
+    }
+    set;
+  }
+
+  private static final RollupDateLiteral TOMORROW_LITERAL {
+    get {
+      if (TOMORROW_LITERAL == null) {
+        TOMORROW_LITERAL = new TomorrowLiteral();
+      }
+      return TOMORROW_LITERAL;
+    }
+    set;
+  }
+
+  private static final RollupDateLiteral LAST_WEEK_LITERAL {
+    get {
+      if (LAST_WEEK_LITERAL == null) {
+        LAST_WEEK_LITERAL = new LastWeekLiteral();
+      }
+      return LAST_WEEK_LITERAL;
+    }
+    set;
+  }
+
+  private static final RollupDateLiteral THIS_WEEK_LITERAL {
+    get {
+      if (THIS_WEEK_LITERAL == null) {
+        THIS_WEEK_LITERAL = new ThisWeekLiteral();
+      }
+      return THIS_WEEK_LITERAL;
+    }
+    set;
+  }
+
+  private static final Map<String, RollupDateLiteral> KEY_TO_DATE_LITERAL = new Map<String, RollupDateLiteral>{
+    'YESTERDAY' => YESTERDAY_LITERAL,
+    'TODAY' => TODAY_LITERAL,
+    'TOMORROW' => TOMORROW_LITERAL,
+    'LAST_WEEK' => LAST_WEEK_LITERAL,
+    'THIS_WEEK' => THIS_WEEK_LITERAL,
     'NEXT_WEEK' => null,
     'LAST_MONTH' => null,
     'THIS_MONTH' => null,
@@ -38,14 +108,17 @@ public abstract class RollupDateLiteral {
     'NEXT_N_FISCAL_​YEARS' => null
   };
 
-  private static final String RELATIVE_LITERAL_REGEX = '(LAST|NEXT)_N_(DAYS|WEEKS|MONTHS|YEARS|QUARTERS|FISCAL_​QUARTERS|FISCAL_​YEARS):?\\d*';
-
   public static Boolean isDateLiteral(String key) {
     return KEY_TO_DATE_LITERAL.containsKey(key) || Pattern.matches(RELATIVE_LITERAL_REGEX, key);
   }
 
   public static RollupDateLiteral get(String key) {
-    return (RollupDateLiteral) KEY_TO_DATE_LITERAL.get(key.substringBefore(':')).newInstance();
+    List<String> possibleDynamicValues = key.split(':');
+    RollupDateLiteral literal = KEY_TO_DATE_LITERAL.get(possibleDynamicValues[0]);
+    if (possibleDynamicValues.size() > 1) {
+      literal.setDynamicValue(possibleDynamicValues[1]);
+    }
+    return literal;
   }
 
   public Boolean matches(String val, String comparison) {
@@ -73,20 +146,54 @@ public abstract class RollupDateLiteral {
     }
   }
 
-  protected abstract Boolean isEqualTo(Datetime val);
-  protected abstract Boolean isGreaterThan(Datetime val);
-  protected abstract Boolean isLessThan(Datetime val);
+  protected abstract Datetime getRef();
+
+  protected Boolean isEqualTo(Datetime val) {
+    return this.getRef() == val;
+  }
+  protected Boolean isLessThan(Datetime val) {
+    return this.getRef() < val;
+  }
+  protected Boolean isGreaterThan(Datetime val) {
+    return this.getRef() > val;
+  }
+
+  protected virtual void setDynamicValue(String afterColon) {
+  }
 
   private class YesterdayLiteral extends RollupDateLiteral {
-    private final Datetime that = Datetime.newInstance(System.today().addDays(-1), Time.newInstance(0, 0, 0, 0));
-    protected override Boolean isEqualTo(Datetime val) {
-      return val == that;
+    private final Datetime ref = NOWISH.addDays(-1);
+    protected override Datetime getRef() {
+      return this.ref;
     }
-    protected override Boolean isLessThan(Datetime val) {
-      return val < that;
+  }
+
+  private class TodayLiteral extends RollupDateLiteral {
+    protected override Datetime getRef() {
+      return NOWISH;
     }
-    protected override Boolean isGreaterThan(Datetime val) {
-      return val > that;
+  }
+
+  private class TomorrowLiteral extends RollupDateLiteral {
+    private final Datetime ref = NOWISH.addDays(1);
+    protected override Datetime getRef() {
+      return this.ref;
+    }
+  }
+
+  private class LastWeekLiteral extends RollupDateLiteral {
+    // TODO - need to align to ThisWeekLiteral, it's not a literal seven days back
+    private final Datetime ref = NOWISH.addDays(-7);
+    protected override Datetime getRef() {
+      return this.ref;
+    }
+  }
+
+  private class ThisWeekLiteral extends RollupDateLiteral {
+    private final Datetime ref = Datetime.newInstance(NOWISH.date().toStartOfWeek(), Time.newInstance(0, 0, 0, 0));
+
+    protected override Datetime getRef() {
+      return this.ref;
     }
   }
 }
