Re-adding RollupFinalizer since, in an ironic and well-timed series of events, it proved its worth as a logger in #190

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -418,6 +418,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     }
 
     public void execute(System.QueueableContext qc) {
+      System.attachFinalizer(new RollupFinalizer());
       this.process(this.rollups);
       this.logFinish();
     }
